Corrected vertical alignment issue on career logos

--- a/less/stevekwan.less
+++ b/less/stevekwan.less
@@ -293,6 +293,7 @@ a.gallery:hover img
       margin-right: 2em;
       margin-bottom: 2em;
       line-height: 60px;
+      vertical-align: middle;
 
       img
       {
